# watson

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/: localhost.py  main.py
src/Watson/: __init__.py  main.py
src/Watson-Explorer/static/js/: coloring_int_columns.js  wrapper.js
src/Watson/static/css/: main.css
src/Watson/static/html/: calculated_hours_per_machine_week.html  df.html  df1.html  df2.html  main.html  realized_hours_per_machine_week.html  sub_tabel.html  test_df.html  total_hours_per_machine_week.html
src/Watson/static/js/: include.js  stop_server.js
src/WatsonExplorer/: __init__.py  localhost.py  test.py
src/WatsonExplorer/static/css/: main.css
src/WatsonExplorer/static/html/: df13.html  df14.html  main.html
src/WatsonExplorer/static/js/: coloring_int_columns.js  include.js
src/static/css/: main.css
src/static/js/: include.js  stop_server.js
