[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
 
[project]
name = "watson"
version = "0.0.1"
authors = [
  { name="Hein Burgmans", website="heinburgmans.com"},
]
description = "Look into the data of your DataFrames with Watson Explorer"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
 
[project.urls]
"Homepage" = "https://github.com/HeintjeB/watson"
"Bug Tracker" = "https://github.com/HeintjeB/watson/issues"