[build-system]
requires = ["setuptools>=61.0", pandas>=]
build-backend = "setuptools.build_meta"
 
[project]
name = "Watson"
version = "1.0.1"
dependencies = [
    "pandas==2.1.4"]
requires-python = ">=3.8"
authors = [
  { name="Hein Burgmans", email="heinburgmans@gmail.com" },
]
description = "Look into the data of your DataFrames with Watson Explorer"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["pandas", "explorer", "watson"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
 
[project.urls]
"Repository" = "https://github.com/HeintjeB/watson"
"Bug Tracker" = "https://github.com/HeintjeB/watson/issues"
"Homepage" = "cobra-ms.com"
Changelog = "https://github.com/HeintjeB/watson/blob/main/CHANGELOG.md"